--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "jquery": "~2.1.1",
     "artoo-js": "~0.1.1",
     "bothan": "~0.0.1"
+  },
+  "devDependencies": {
+    "mocha": "~1.21.4",
+    "express": "~4.9.5"
   }
 }
