--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   "dependencies": {
     "jquery": "~2.1.1",
     "artoo-js": "~0.1.1",
-    "bothan": "~0.0.1"
+    "bothan": "~0.0.1",
+    "typology": "~0.1.0"
   },
   "devDependencies": {
     "mocha": "~1.21.4",
