--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "artoo-js": "~0.1.1",
     "bothan": "~0.0.1",
     "typology": "~0.1.0",
-    "uuid": "~2.0.1"
+    "uuid": "~2.0.1",
+    "lodash": "^2.4.1"
   },
   "devDependencies": {
     "mocha": "~1.21.4",
