--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "bothan": "~0.0.1",
     "typology": "~0.1.0",
     "uuid": "~2.0.1",
-    "lodash": "^2.4.1"
+    "lodash": "^2.4.1",
+    "async": "~0.9.0"
   },
   "devDependencies": {
     "mocha": "~1.21.4",
