--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Scrape front-end, automatize back-end.",
   "main": "index.js",
   "scripts": {
-    "test": "mocha -R spec"
+    "test": "gulp test"
   },
   "repository": {
     "type": "git",
@@ -33,7 +33,10 @@
     "async": "~0.9.0"
   },
   "devDependencies": {
-    "mocha": "~1.21.4",
-    "express": "~4.9.5"
+    "express": "~4.9.5",
+    "gulp": "^3.8.9",
+    "gulp-jshint": "^1.8.5",
+    "gulp-mocha": "^1.1.1",
+    "mocha": "~1.21.4"
   }
 }
