--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "homepage": "https://github.com/medialab/sandcrawler",
   "dependencies": {
     "jquery": "~2.1.1",
-    "artoo-js": "~0.2.0",
+    "artoo-js": "git+https://github.com/medialab/artoo.git",
     "bothan": "git+https://github.com/medialab/bothan.git",
     "typology": "~0.1.0",
     "uuid": "~2.0.1",
