--- a/package.json
+++ b/package.json
@@ -24,20 +24,21 @@
   },
   "homepage": "https://github.com/medialab/sandcrawler",
   "dependencies": {
-    "jquery": "~2.1.1",
-    "artoo-js": "0.2.0",
-    "bothan": "git+https://github.com/medialab/bothan.git",
-    "typology": "~0.1.0",
-    "uuid": "~2.0.1",
-    "lodash": "^2.4.1",
+    "artoo-js": "^0.3.0",
     "async": "~0.9.0",
-    "request": "~2.48.0"
+    "bothan": "git+https://github.com/medialab/bothan.git",
+    "cheerio": "^0.18.0",
+    "jquery": "~2.1.1",
+    "lodash": "^2.4.1",
+    "request": "^2.51.0",
+    "typology": "^0.2.1",
+    "uuid": "~2.0.1"
   },
   "devDependencies": {
     "express": "~4.10.2",
     "gulp": "^3.8.9",
     "gulp-jshint": "^1.8.5",
-    "gulp-mocha": "^1.1.1",
+    "gulp-mocha": "^2.0.0",
     "mocha": "~2.0.1"
   }
 }
