--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha -R spec ./test/endpoint.js",
-    "lint": "jshint src && jshint test"
+    "lint": "jshint src && jshint test && jshint phantom"
   },
   "repository": {
     "type": "git",
