Starting better docs

--- a/_config.yml
+++ b/_config.yml
@@ -22,12 +22,12 @@ sidebar:
   - url: 'quick_start'
     title: 'Quick Start'
   - sep
-  - url: 'scraper'
-    title: 'Scraper'
-  - url: 'static_scraper'
-    title: 'Static Scraper'
-  - url: 'spawns'
-    title: 'Custom Phantom'
+  - url: 'spider'
+    title: 'Spider'
+  - url: 'phantom_spider'
+    title: 'Phantom Spider'
+  - url: 'spawn'
+    title: 'Spawning phantoms'
   - url: 'lifecycle'
     title: 'Lifecycle'
   - url: 'plugins'
