--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "async": "~0.9.0",
     "bothan": "git+https://github.com/medialab/bothan.git",
     "cheerio": "^0.18.0",
-    "jquery": "~2.1.1",
+    "jquery": "2.1.3",
     "lodash": "^3.1.0",
     "request": "^2.51.0",
     "typology": "^0.3.1",
