--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "basic-auth": "^1.0.0",
+    "body-parser": "^1.12.0",
     "express": "^4.11.1",
     "jshint": "^2.6.0",
     "mocha": "^2.1.0"
