--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,8 @@ sidebar:
     title: 'Spider'
   - url: 'phantom_spider'
     title: 'Phantom Spider'
+  - url: 'phantom_artoo'
+    title: 'Phantom Artoo'
   - url: 'spawn'
     title: 'Spawning phantoms'
   - url: 'lifecycle'
