--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "basic-auth": "^1.0.0",
     "body-parser": "^1.12.0",
+    "cookie-parser": "^1.3.4",
     "express": "^4.11.1",
     "jshint": "^2.6.0",
     "mocha": "^2.1.0"
