--- a/package.json
+++ b/package.json
@@ -29,9 +29,12 @@
     "async": "~0.9.0",
     "bothan": "git+https://github.com/medialab/bothan.git",
     "cheerio": "^0.18.0",
+    "fs-extra": "^0.16.3",
     "jquery": "2.1.3",
     "lodash": "^3.1.0",
     "request": "^2.51.0",
+    "tough-cookie": "^0.12.1",
+    "tough-cookie-filestore": "0.0.1",
     "typology": "^0.3.1",
     "uuid": "~2.0.1"
   },
