--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jquery": "2.1.3",
     "lodash": "^3.1.0",
     "request": "^2.51.0",
+    "tough-cookie": "^0.12.1",
     "tough-cookie-filestore": "0.0.1",
     "typology": "^0.3.1",
     "uuid": "~2.0.1"
