--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "dependencies": {
     "artoo-js": "^0.3.1",
     "async": "~0.9.0",
-    "bothan": "git+https://github.com/medialab/bothan.git",
+    "bothan": "0.2.0",
     "cheerio": "^0.18.0",
     "fs-extra": "^0.16.3",
     "jquery": "2.1.3",
