--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bothan": "0.2.0",
     "cheerio": "^0.19.0",
     "fs-extra": "^0.16.3",
+    "iconv-lite": "^0.4.7",
     "jquery": "2.1.3",
     "lodash": "^3.1.0",
     "request": "^2.51.0",
