--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "name": "Yomguithereal",
     "url": "https://github.com/Yomguithereal"
   },
-  "license": "MIT",
+  "license": "LGPL-3.0",
   "bugs": {
     "url": "https://github.com/medialab/sandcrawler/issues"
   },
